--- a/images/huddle.html
+++ b/images/huddle.html
@@ -88,9 +88,9 @@
     </div>
 <div class="footer-right">
 <div class="social-icons">
-  <button class="instagram-button">  <img class="instagram" src="./logo-instagram.svg" alt="instagram logo"> </img> </button>
-<button class="twitter-button">  <img class="twitter" src="./logo-twitter.svg" alt="twitter logo"> </img> </button>
-<button class="facebook-button">  <img class="facebook" src="./logo-facebook.svg" alt="facebook logo"> </img> </button>
+  <button class="instagram-button">  <img class="instagram" style="filter: contrast(0) brightness(0) invert(1);" src="./logo-instagram.svg" alt="instagram logo"> </img> </button>
+<button class="twitter-button">  <img class="twitter" style="filter: contrast(0) brightness(0) invert(1);" src="./logo-twitter.svg" alt="twitter logo"> </img> </button>
+<button class="facebook-button">  <img class="facebook" style="filter: contrast(0) brightness(0) invert(1);" src="./logo-facebook.svg" alt="facebook logo"> </img> </button>
 </div>
       <p class="copyright-text"><img class="copyright" src="./Copyright_white.svg" alt="copyright logo"></img>Copyright 2018 Huddle. All rights reserved.</p>
 </div>
